# fallout_rts

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  run.ps1  runrelease.ps1  setup.ps1  vcpkg.json
assets/: ImphenziaPalette01.png.import  food_gatherer.blend  food_gatherer.blend1  food_gatherer.mtl  shack01.blend  shack01.blend1  shack01.mtl  street_colorful.blend  street_colorful.blend1  street_colorful.mtl  street_straight.blend  street_straight.blend1  street_straight.mtl  street_three.blend  street_three.blend1  street_three.mtl  street_two.blend  street_two.blend1  street_two.mtl  tre7F63.tmp  tree01.blend  tree01.blend1  tree01.glb.import  tree01.gltf.import  tree01.mtl  tree01.obj.import  tree01_am.tres  tree02.blend  tree02.blend1  tree02.mtl  vault.blend  vault.blend1  vault.mtl
shaders/: lighting_fs.glsl  lighting_single_vs.glsl
src/: game.cpp  game.hpp  main.cpp  player.hpp  rlights.cpp  rlights.h  world_state.hpp
src/ui/: building_menu.hpp  ui.cpp  ui.hpp
src/utils/: cell_position.hpp  instanced_model.cpp  instanced_model.hpp  renderer.hpp  resource_manager.hpp
src/world/: buildings.cpp  buildings.hpp  chunk.cpp  chunk.hpp  terrain.cpp  terrain.hpp  world.cpp  world.hpp
src/world/buildings/: building.hpp  gatherer.cpp  gatherer.hpp  vault.hpp
